--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body data-menu-over>
-  <!-- <include src="./partials/header.html"></include>
+  <include src="./partials/header.html"></include>
 
   <main>
     <include src="./partials/section-1.html"></include>
@@ -22,7 +22,7 @@
     <include src="./partials/section-4.html"></include>
 
     <include src="./partials/section-5.html"></include>
-  </main> -->
+  </main>
 
   <include src="./partials/footer.html"></include>
 
